# PSPv2

./: .gitignore  CMakeLists.txt  CONTROLS.txt  HOW_TO_ADD_GAMES.txt  README.md  build_installer.ps1  create_assets.py  create_dist.ps1  pspsetup.iss  setup_dependencies.ps1  setup_ffmpeg.ps1
config/: menu.json  settings.json
src/: AboutScreen.cpp  AboutScreen.hpp  ControllerSelectScreen.cpp  ControllerSelectScreen.hpp  CustomThemeCreator.cpp  CustomThemeCreator.hpp  GameMetadataExtractor.cpp  GameMetadataExtractor.hpp  GameStartupScreen.cpp  GameStartupScreen.hpp  IntroScreen.cpp  IntroScreen.hpp  Launcher.cpp  Launcher.hpp  Menu.cpp  Menu.cpp.old  Menu.hpp  QuickMenu.cpp  QuickMenu.hpp  RomAssetManager.cpp  RomAssetManager.hpp  SetupScreen.cpp  SetupScreen.hpp  ThemeSelector.cpp  ThemeSelector.hpp  UiSoundBank.cpp  UiSoundBank.hpp  UserProfile.cpp  UserProfile.hpp  main.cpp
